--- a/index.html
+++ b/index.html
@@ -5,18 +5,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mountain-common.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="main-container">
+    <div class="index-container">
         <header>
             header test
         </header>
-        <div class="mainimg">
-            사진만이 추억의 전부는 아닙니다.
-            손 안의 추억 기록기 "램블러(Ramblr)"
+        <div class="main-wrapper">
+            <h1 class="main-title">함께하는 등산이<br>좋은등산이 될 수 있도록</h1>
+            <h2 class="sub-title">Mountain Climbing Together</h2>
         </div>
+
+        <!-- 오늘의 날씨 -->
+        <section class="sec1-container">
+            <div class="sec1-main-wrapper">
+                <h2 class="sec1-title">오늘의 날씨</h2>
+                <h3 class="sec1-sub">날씨 확인 후 안전 등산 하세요!</h3>
+            </div>
+
+            <div class="weather-wrap">
+                <div class="weather-today-wrapper">
+                    <div class="region">서울특별시</div>
+                    <div class="weather-main">
+                        <div class="weather-icon"></div>
+                        <div class="weather-now">24.0°</div>
+                    </div>
+                </div>
+                <div class="weather-detail-wrapper">
+                    <div class="weather-detail1">바람 : 3</div>
+                    <div class="weather-detail1">현재습도 : 30°</div>
+                    <div class="weather-detail1">구름 : 0m/s</div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 오늘의 산, 막걸리 -->
+        <section class="sec2-container">
+            <div class="sec2-main-wrapper">
+                <h2 class="sec2-title">오늘의 산과 막걸리</h2>
+                <h3 class="sec2-sub">당신의 고민을 도와드립니다.</h3>
+            </div>
+
+            <div class="today-mountain-wrapper">
+                <img src="jpg/less.png" alt="" class="less">
+                <div class="mountain-main-warpper">
+                    <img src="jpg/contents_images-1655441432506-1.jpg" alt="" class="today-mountain-img">
+                    <div class="today-mountain">
+                        <div class="today-mountain-title">오미자주</div>
+                        <div class="today-mountain-content">
+                            젊은 세대들이 막걸리를 찾으면서 막걸리
+                            시장이 점점 커지고 있습니다
+                            덕분에 대형마트나 전통주 매장이 아니더라도
+                            편의점에서 여러 종류의 막걸리를
+                            쉽게 찾을 수 있습니다.
+                        </div>
+                        <div class="today-mountain-price">
+                            가격 : 20000원
+                        </div>
+                    </div>
+                </div>
+                <img src="jpg/than.png" alt="" class="then">
+            </div>
+        </section>
+
+        <!-- 모임 후기 -->
+        <section class="sec3-container">
+            <div class="sec3-main-wrapper">
+                <h2 class="sec1-title">모임 후기</h2>
+                <h3 class="sec1-sub">정기산행 및 소모임 후기</h3>
+            </div>
+
+            <div class="feed-wrapper">
+                <div class="feed-img"></div>
+                <div class="feed-text-wrapper">
+                    <div class="feed-text-top">
+                        <div class="feed-content">오늘은 정기산행 날</div>
+                        <div class="feed-writer">이정숙</div>
+                    </div>
+                    <div class="feed-write-date">2023.05.09</div>
+                    <div class="feed-icon">
+                        <div class="heart-wrapper">
+                            <img src="jpg/heart.png" alt="">
+                            <div class="heart-icon-count">8</div>
+                        </div>
+                        <div class="comment-wrapper">
+                            <img src="jpg/bubble.png" alt="">
+                            <div class="comment-icon-count">8</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="feed-wrapper">
+                <div class="feed-img"></div>
+                <div class="feed-text-wrapper">
+                    <div class="feed-text-top">
+                        <div class="feed-content">오늘은 정기산행 날</div>
+                        <div class="feed-writer">이정숙</div>
+                    </div>
+                    <div class="feed-write-date">2023.05.09</div>
+                    <div class="feed-icon">
+                        <div class="heart-wrapper">
+                            <img src="jpg/heart.png" alt="">
+                            <div class="heart-icon-count">8</div>
+                        </div>
+                        <div class="comment-wrapper">
+                            <img src="jpg/bubble.png" alt="">
+                            <div class="comment-icon-count">8</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
