글쓰기 form완료

--- a/issue.html
+++ b/issue.html
@@ -36,12 +36,14 @@
 
         <section class="review-main-wrapper">
             <div class="title-wrapper">
-                <div class="review-main-title">산악 후기</div>
-                <div class="review-sub-title">함께했던 순간들을 공유하는 게시판입니다.</div>
+                <div class="review-main-title">산악 이슈</div>
+                <div class="review-sub-title">요즘 가장 핫한 산악 정보는?</div>
             </div>
             <div class="hide-admin">
-                <div class="hide-admin-text">공지 숨기기</div>
-                <input type="range" max="1" id="choice" name="choice">
+                <div class="hide-admin">
+                    <div class="hide-admin-text">공지 숨기기</div>
+                    <input type="range" max="1" id="choice" name="choice">
+                </div>
             </div>
         </section>
 
@@ -232,20 +234,20 @@
     </div>
 
     <section class="pagination-container">
-        <div class="prev-btn"><img src="jpg/less.png" alt="" class="less-icon"> 이전</div>
-        <ul class="pagination-wrapper">
-            <li class="pagination button-active"><a href="">1</a></li>
-            <li class="pagination"><a href="">2</a></li>
-            <li class="pagination"><a href="">3</a></li>
-            <li class="pagination"><a href="">4</a></li>
-            <li class="pagination"><a href="">5</a></li>
-            <li class="pagination"><a href="">6</a></li>
-            <li class="pagination"><a href="">7</a></li>
-            <li class="pagination"><a href="">8</a></li>
-            <li class="pagination"><a href="">9</a></li>
-            <li class="pagination"><a href="">10</a></li>
-        </ul>
-        <div class="next-btn">다음<img src="jpg/than.png" alt="" class="than-icon"></div>
+            <div class="prev-btn"><img src="jpg/less.png" alt="" class="less-icon"> 이전</div>
+            <ul class="pagination-wrapper">
+                <li class="pagination button-active"><a href="">1</a></li>
+                <li class="pagination"><a href="">2</a></li>
+                <li class="pagination"><a href="">3</a></li>
+                <li class="pagination"><a href="">4</a></li>
+                <li class="pagination"><a href="">5</a></li>
+                <li class="pagination"><a href="">6</a></li>
+                <li class="pagination"><a href="">7</a></li>
+                <li class="pagination"><a href="">8</a></li>
+                <li class="pagination"><a href="">9</a></li>
+                <li class="pagination"><a href="">10</a></li>
+            </ul>
+            <div class="next-btn">다음<img src="jpg/than.png" alt="" class="than-icon"></div>
     </section>
 
 </body>
