--- a/index.html
+++ b/index.html
@@ -5,20 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="mountain-common.css">
     <link rel="stylesheet" href="index.css">
+
     <title>Document</title>
 </head>
-<!-- <img src="jpg/than.png" alt=""> -->
 
 <body>
     <div class="index-container">
-        <header>
-            header test
+        <header class="header-container">
+            <div class="header-wrapper">
+                <ul class="category-wrapper">
+                    <li><a href="" class="">추천 정보</a></li>
+                    <li><a href="" class="">커뮤니티</a></li>
+                    <li><a href="" class="">모임</a></li>
+                    <li><a href="" class="">중고거래</a></li>
+                    <li><a href="" class="">스탬프</a></li>
+                </ul>
+                <img src="jpg/logo(white).png" alt="" class="logo">
+    
+                <ul class="login-wrapper">
+                    <li><a href="" class="signUp-btn">Sign up</a></li>
+                    <li><a href="" class="signIn-btn">Sign in</a></li>
+                </ul>
+            </div>
         </header>
+
+
         <div class="main-wrapper">
             <div class="main-text">
-                <div class="logo"><img src="jpg/logo.png" alt=""></div>
+                <div class="main-logo"><img src="jpg/logo.png" alt=""></div>
                 <div class="main-title-wrapper">
                     <h1 class="main-title">함께하는 등산이<br>좋은등산이 될 수 있도록</h1>
                     <a href="#" class="gobtn">
