메인페이지 진행중

--- a/club.html
+++ b/club.html
@@ -218,6 +218,14 @@
             </div>
         </div>
     </section>
+
+    <script>
+        const clubListWrapper = document.querySelector('.club-list-wrapper');
+    
+        clubListWrapper.addEventListener('click', function () {
+            this.classList.toggle('clicked');
+        });
+    </script>
 </body>
 
 </html>
