--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="" class="">스탬프</a></li>
                 </ul>
                 <img src="jpg/logo(white).png" alt="" class="logo">
-    
+
                 <ul class="login-wrapper">
                     <li><a href="" class="signUp-btn">Sign up</a></li>
                     <li><a href="" class="signIn-btn">Sign in</a></li>
@@ -35,12 +35,12 @@
 
         <div class="main-wrapper">
             <div class="main-text">
-                <div class="main-logo"><img src="jpg/logo.png" alt=""></div>
+                <div class="main-logo"><img src="jpg/logo(white).png" alt=""></div>
                 <div class="main-title-wrapper">
                     <h1 class="main-title">함께하는 등산이<br>좋은등산이 될 수 있도록</h1>
                     <a href="#" class="gobtn">
                         산행 신청하러 가기
-                        <img src="jpg/than(white).png" alt="">
+                        <img src="jpg/than.png" alt="">
                     </a>
                 </div>
                 <h2 class="sub-title">Mountain Climbing Together</h2>
@@ -48,73 +48,75 @@
             <div class="main-img">
             </div>
         </div>
+
         <!-- 오늘의 날씨 -->
-        <section class="sec1-container">
-            <div class="sec1-main-wrapper">
-                <h2 class="sec1-title">오늘의 날씨</h2>
-                <h3 class="sec1-sub">날씨 확인 후 안전 등산 하세요!</h3>
-            </div>
+        <!-- 2번째 영역 -->
+        <section class="second-warpper">
 
-            <div class="weather-wrap">
-                <div class="weather-today-wrapper">
-                    <a class="region">서울특별시</a>
-                    <div class="weather-main">
-                        <div class="weather-icon"><img src="jpg/sunny.png" alt=""></div>
-                        <div class="weather-now">24.0°</div>
+            <section class="sec1-container">
+                <div class="weather-wrap">
+                    <div class="weather-today-wrapper">
+                        <a class="region">서울특별시</a>
+                        <div class="weather-main">
+                            <div class="weather-icon"><img src="jpg/sunny.png" alt=""></div>
+                            <div class="weather-now">24.0°</div>
+                        </div>
+                        <div class="weather-detail-wrapper">
+                            <div class="weather-detail">바람 : 3</div>
+                            <div class="weather-detail">현재습도 : 30°</div>
+                            <div class="weather-detail">구름 : 0m/s</div>
+                        </div>
+                        <div class="etc">※현재 온도는 기상청 1시간 기준으로 갱신됩니다.</div>
                     </div>
-                    <div class="weather-detail-wrapper">
-                        <div class="weather-detail">바람 : 3</div>
-                        <div class="weather-detail">현재습도 : 30°</div>
-                        <div class="weather-detail">구름 : 0m/s</div>
+                    <div class="weather-mountain-wrapper">
+                        <a class="region">북한산</a>
+                        <div class="weather-main">
+                            <div class="weather-icon"><img src="jpg/sunny.png" alt=""></div>
+                            <div class="weather-now">24.0°</div>
+
+                        </div>
+                        <div class="weather-detail-wrapper">
+                            <div class="weather-detail">바람 : 3</div>
+                            <div class="weather-detail">현재습도 : 30°</div>
+                            <div class="weather-detail">구름 : 0m/s</div>
+
+                        </div>
+                        <div class="etc">※현재 온도는 기상청 1시간 기준으로 갱신됩니다.</div>
                     </div>
-                    <div class="etc">※현재 온도는 기상청 1시간 기준으로 갱신됩니다.</div>
                 </div>
-                <div class="weather-mountain-wrapper">
-                    <a class="region">북한산</a>
-                    <div class="weather-main">
-                        <div class="weather-icon"><img src="jpg/sunny.png" alt=""></div>
-                        <div class="weather-now">24.0°</div>
+            </section>
 
-                    </div>
-                    <div class="weather-detail-wrapper">
-                        <div class="weather-detail">바람 : 3</div>
-                        <div class="weather-detail">현재습도 : 30°</div>
-                        <div class="weather-detail">구름 : 0m/s</div>
-
-                    </div>
-                    <div class="etc">※현재 온도는 기상청 1시간 기준으로 갱신됩니다.</div>
+            <!-- 오늘의 산, 막걸리 -->
+            <section class="sec2-container">
+                <div class="sec2-main-wrapper">
+                    <h2 class="sec2-title">오늘의 산, 막걸리</h2>
+                    <!-- <h3 class="sec2-sub">당신의 고민을 도와드립니다.</h3> -->
                 </div>
-            </div>
+
+                <div class="today-mountain-wrapper">
+                    <img src="jpg/less.png" alt="" class="less">
+                    <div class="mountain-main-warpper">
+                        <div class="today-mountain">
+                            <div class="today-mountain-title">오미자주</div>
+                            <div class="today-mountain-content">
+                                젊은 세대들이 막걸리를 찾으면서 막걸리
+                                시장이 점점 커지고 있습니다
+                                <br>덕분에 대형마트나 전통주 매장이 아니더라도
+                                편의점에서
+                                여러 종류의 막걸리를
+                                쉽게 찾을 수 있습니다.
+                            </div>
+                            <div class="today-mountain-price">
+                                가격 : 20000원
+                            </div>
+                        </div>
+                        <div class="today-mountain-img"></div>
+                    </div>
+                    <img src="jpg/than.png" alt="" class="then">
+                </div>
+            </section>
         </section>
 
-        <!-- 오늘의 산, 막걸리 -->
-        <section class="sec2-container">
-            <div class="sec2-main-wrapper">
-                <h2 class="sec2-title">오늘의 산과 막걸리</h2>
-                <h3 class="sec2-sub">당신의 고민을 도와드립니다.</h3>
-            </div>
-
-            <div class="today-mountain-wrapper">
-                <img src="jpg/less.png" alt="" class="less">
-                <div class="mountain-main-warpper">
-                    <img src="jpg/contents_images-1655441432506-1.jpg" alt="" class="today-mountain-img">
-                    <div class="today-mountain">
-                        <div class="today-mountain-title">오미자주</div>
-                        <div class="today-mountain-content">
-                            젊은 세대들이 막걸리를 찾으면서 막걸리
-                            시장이 점점 커지고 있습니다
-                            덕분에 대형마트나 전통주 매장이 아니더라도
-                            편의점에서 여러 종류의 막걸리를
-                            쉽게 찾을 수 있습니다.
-                        </div>
-                        <div class="today-mountain-price">
-                            가격 : 20000원
-                        </div>
-                    </div>
-                </div>
-                <img src="jpg/than.png" alt="" class="then">
-            </div>
-        </section>
 
         <!-- 모임 후기 -->
         <section class="sec3-container">
