지송님 보세요

--- a/club.html
+++ b/club.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="mountain-common.css">
-    <link rel="stylesheet" href="club.css">
+    <link rel="stylesheet" href="club-list.css">
 </head>
 
 <body>
@@ -31,197 +31,187 @@
     </header>
 
     <section class="club-container">
+        <div class="club-warpper">
+            <div class="write-btn-wrapper"><button class="write-btn">글쓰기</button></div>
+            <div class="club-list-wrapper">
+                <div class="club-title">백두산 모임</div>
+                <div class="icon-detail">
+                    <div class="mountain-sec">
+                        <img src="jpg/mountain.png" alt="" class="mountain-icon">
+                        <p class="mountain-text">백두산</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/people.png" alt="" class="people-icon">
+                        <p class="people-text">4명 / 소모임</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/calendar.png" class="calendar-icon">
+                        <p class="calendar-text">2023.05.13 7시</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/location.png" alt="" class="location-icon">
+                        <p class="location-text">관악산 지하주차장</p>
+                    </div>
+                </div>
+                <div class="club-content">
+                    백두산에서 같이<br>산행하실 분들 구해요!
+                </div>
 
-        <div class="club-list-wrapper">
-            <div class="club-title">백두산 모임</div>
-            <div class="icon-detail">
-                <div class="mountain-sec">
-                    <img src="jpg/mountain.png" alt="" class="mountain-icon">
-                    <p class="mountain-text">백두산</p>
+                <div class="now-count-wrapper">
+                    <div class="now-text">현재 모집인원</div>
+                    <div class="now-count">1/4<p id="lower-size">명</p>
+                    </div>
                 </div>
-                <div class="mountain-sec">
-                    <img src="jpg/people.png" alt="" class="people-icon">
-                    <p class="people-text">4명 / 소모임</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/calendar.png" class="calendar-icon">
-                    <p class="calendar-text">2023.05.13 7시</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/location.png" alt="" class="location-icon">
-                    <p class="location-text">관악산 지하주차장</p>
-                </div>
-            </div>
-            <div class="club-content">
-                백두산에서 같이<br>산행하실 분들 구해요!
-            </div>
-
-            <div class="now-count-wrapper">
-                <div class="now-text">현재 모집인원</div>
-                <div class="now-count">1/4<p id="lower-size">명</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="club-list-wrapper">
-            <div class="club-title">백두산 모임</div>
-            <div class="icon-detail">
-                <div class="mountain-sec">
-                    <img src="jpg/mountain.png" alt="" class="mountain-icon">
-                    <p class="mountain-text">백두산</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/people.png" alt="" class="people-icon">
-                    <p class="people-text">4명 / 소모임</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/calendar.png" class="calendar-icon">
-                    <p class="calendar-text">2023.05.13 7시</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/location.png" alt="" class="location-icon">
-                    <p class="location-text">관악산 지하주차장</p>
-                </div>
-            </div>
-            <div class="club-content">
-                백두산에서 같이<br>산행하실 분들 구해요!
             </div>
 
-            <div class="now-count-wrapper">
-                <div class="now-text">현재 모집인원</div>
-                <div class="now-count">1/4<p id="lower-size">명</p>
+            <div class="club-list-wrapper">
+                <div class="club-title">백두산 모임</div>
+                <div class="icon-detail">
+                    <div class="mountain-sec">
+                        <img src="jpg/mountain.png" alt="" class="mountain-icon">
+                        <p class="mountain-text">백두산</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/people.png" alt="" class="people-icon">
+                        <p class="people-text">4명 / 소모임</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/calendar.png" class="calendar-icon">
+                        <p class="calendar-text">2023.05.13 7시</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/location.png" alt="" class="location-icon">
+                        <p class="location-text">관악산 지하주차장</p>
+                    </div>
                 </div>
-            </div>
-        </div>
+                <div class="club-content">
+                    백두산에서 같이<br>산행하실 분들 구해요!
+                </div>
 
-        <div class="club-list-wrapper">
-            <div class="club-title">백두산 모임</div>
-            <div class="icon-detail">
-                <div class="mountain-sec">
-                    <img src="jpg/mountain.png" alt="" class="mountain-icon">
-                    <p class="mountain-text">백두산</p>
+                <div class="now-count-wrapper">
+                    <div class="now-text">현재 모집인원</div>
+                    <div class="now-count">1/4<p id="lower-size">명</p>
+                    </div>
                 </div>
-                <div class="mountain-sec">
-                    <img src="jpg/people.png" alt="" class="people-icon">
-                    <p class="people-text">4명 / 소모임</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/calendar.png" class="calendar-icon">
-                    <p class="calendar-text">2023.05.13 7시</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/location.png" alt="" class="location-icon">
-                    <p class="location-text">관악산 지하주차장</p>
-                </div>
-            </div>
-            <div class="club-content">
-                백두산에서 같이<br>산행하실 분들 구해요!
-            </div>
-
-            <div class="now-count-wrapper">
-                <div class="now-text">현재 모집인원</div>
-                <div class="now-count">1/4<p id="lower-size">명</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="club-list-wrapper">
-            <div class="club-title">백두산 모임</div>
-            <div class="icon-detail">
-                <div class="mountain-sec">
-                    <img src="jpg/mountain.png" alt="" class="mountain-icon">
-                    <p class="mountain-text">백두산</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/people.png" alt="" class="people-icon">
-                    <p class="people-text">4명 / 소모임</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/calendar.png" class="calendar-icon">
-                    <p class="calendar-text">2023.05.13 7시</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/location.png" alt="" class="location-icon">
-                    <p class="location-text">관악산 지하주차장</p>
-                </div>
-            </div>
-            <div class="club-content">
-                백두산에서 같이<br>산행하실 분들 구해요!
             </div>
 
-            <div class="now-count-wrapper">
-                <div class="now-text">현재 모집인원</div>
-                <div class="now-count">1/4<p id="lower-size">명</p>
+            <div class="club-list-wrapper">
+                <div class="club-title">백두산 모임</div>
+                <div class="icon-detail">
+                    <div class="mountain-sec">
+                        <img src="jpg/mountain.png" alt="" class="mountain-icon">
+                        <p class="mountain-text">백두산</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/people.png" alt="" class="people-icon">
+                        <p class="people-text">4명 / 소모임</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/calendar.png" class="calendar-icon">
+                        <p class="calendar-text">2023.05.13 7시</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/location.png" alt="" class="location-icon">
+                        <p class="location-text">관악산 지하주차장</p>
+                    </div>
                 </div>
-            </div>
-        </div>
+                <div class="club-content">
+                    백두산에서 같이<br>산행하실 분들 구해요!
+                </div>
 
-        <div class="club-list-wrapper">
-            <div class="club-title">백두산 모임</div>
-            <div class="icon-detail">
-                <div class="mountain-sec">
-                    <img src="jpg/mountain.png" alt="" class="mountain-icon">
-                    <p class="mountain-text">백두산</p>
+                <div class="now-count-wrapper">
+                    <div class="now-text">현재 모집인원</div>
+                    <div class="now-count">1/4<p id="lower-size">명</p>
+                    </div>
                 </div>
-                <div class="mountain-sec">
-                    <img src="jpg/people.png" alt="" class="people-icon">
-                    <p class="people-text">4명 / 소모임</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/calendar.png" class="calendar-icon">
-                    <p class="calendar-text">2023.05.13 7시</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/location.png" alt="" class="location-icon">
-                    <p class="location-text">관악산 지하주차장</p>
-                </div>
-            </div>
-            <div class="club-content">
-                백두산에서 같이<br>산행하실 분들 구해요!
-            </div>
-
-            <div class="now-count-wrapper">
-                <div class="now-text">현재 모집인원</div>
-                <div class="now-count">1/4<p id="lower-size">명</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="club-list-wrapper">
-            <div class="club-title">백두산 모임</div>
-            <div class="icon-detail">
-                <div class="mountain-sec">
-                    <img src="jpg/mountain.png" alt="" class="mountain-icon">
-                    <p class="mountain-text">백두산</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/people.png" alt="" class="people-icon">
-                    <p class="people-text">4명 / 소모임</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/calendar.png" class="calendar-icon">
-                    <p class="calendar-text">2023.05.13 7시</p>
-                </div>
-                <div class="mountain-sec">
-                    <img src="jpg/location.png" alt="" class="location-icon">
-                    <p class="location-text">관악산 지하주차장</p>
-                </div>
-            </div>
-            <div class="club-content">
-                백두산에서 같이<br>산행하실 분들 구해요!
             </div>
 
-            <div class="now-count-wrapper">
-                <div class="now-text">현재 모집인원</div>
-                <div class="now-count">1/4<p id="lower-size">명</p>
+            <div class="club-list-wrapper">
+                <div class="club-title">백두산 모임</div>
+                <div class="icon-detail">
+                    <div class="mountain-sec">
+                        <img src="jpg/mountain.png" alt="" class="mountain-icon">
+                        <p class="mountain-text">백두산</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/people.png" alt="" class="people-icon">
+                        <p class="people-text">4명 / 소모임</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/calendar.png" class="calendar-icon">
+                        <p class="calendar-text">2023.05.13 7시</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/location.png" alt="" class="location-icon">
+                        <p class="location-text">관악산 지하주차장</p>
+                    </div>
+                </div>
+                <div class="club-content">
+                    백두산에서 같이<br>산행하실 분들 구해요!
+                </div>
+
+                <div class="now-count-wrapper">
+                    <div class="now-text">현재 모집인원</div>
+                    <div class="now-count">1/4<p id="lower-size">명</p>
+                    </div>
                 </div>
             </div>
+
+
+            <div class="club-list-wrapper">
+                <div class="club-title">백두산 모임</div>
+                <div class="icon-detail">
+                    <div class="mountain-sec">
+                        <img src="jpg/mountain.png" alt="" class="mountain-icon">
+                        <p class="mountain-text">백두산</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/people.png" alt="" class="people-icon">
+                        <p class="people-text">4명 / 소모임</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/calendar.png" class="calendar-icon">
+                        <p class="calendar-text">2023.05.13 7시</p>
+                    </div>
+                    <div class="mountain-sec">
+                        <img src="jpg/location.png" alt="" class="location-icon">
+                        <p class="location-text">관악산 지하주차장</p>
+                    </div>
+                </div>
+                <div class="club-content">
+                    백두산에서 같이<br>산행하실 분들 구해요!
+                </div>
+
+                <div class="now-count-wrapper">
+                    <div class="now-text">현재 모집인원</div>
+                    <div class="now-count">1/4<p id="lower-size">명</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <section class="pagination-container">
+                <div class="prev-btn"><img src="jpg/less.png" alt="" class="less-icon"> 이전</div>
+                <ul class="pagination-wrapper">
+                    <li class="pagination button-active"><a href="">1</a></li>
+                    <li class="pagination"><a href="">2</a></li>
+                    <li class="pagination"><a href="">3</a></li>
+                    <li class="pagination"><a href="">4</a></li>
+                    <li class="pagination"><a href="">5</a></li>
+                    <li class="pagination"><a href="">6</a></li>
+                    <li class="pagination"><a href="">7</a></li>
+                    <li class="pagination"><a href="">8</a></li>
+                    <li class="pagination"><a href="">9</a></li>
+                    <li class="pagination"><a href="">10</a></li>
+                </ul>
+                <div class="next-btn">다음<img src="jpg/than.png" alt="" class="than-icon"></div>
+            </section>
         </div>
     </section>
 
     <script>
         const clubListWrapper = document.querySelector('.club-list-wrapper');
-    
+
         clubListWrapper.addEventListener('click', function () {
             this.classList.toggle('clicked');
         });
