--- a/review.html
+++ b/review.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="header.css">
 </head>
 
-<body>
+<body  id="bg-color">
     <header class="header-container">
         <div class="header-wrapper">
             <ul class="category-wrapper">
@@ -31,7 +31,7 @@
     </header>
 
     <!-- 글 영역 -->
-    <a href="#"><img src="" alt="" class="testImg"></a>
+    <div class="main-img"></div>
     <div class="review-wrapper">
 
         <section class="review-main-wrapper">
