--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@
             <section class="sec2-container">
                 <div class="sec2-main-wrapper">
                     <h2 class="sec2-title">오늘의 산, 막걸리</h2>
-                    <!-- <h3 class="sec2-sub">당신의 고민을 도와드립니다.</h3> -->
                 </div>
 
                 <div class="today-mountain-wrapper">
-                    <img src="jpg/less.png" alt="" class="less">
+                    
                     <div class="mountain-main-warpper">
                         <div class="today-mountain">
                             <div class="today-mountain-title">오미자주</div>
@@ -110,9 +109,12 @@
                                 가격 : 20000원
                             </div>
                         </div>
-                        <div class="today-mountain-img"></div>
+                        <div class="today-mountain-img">
+                            <img src="jpg/less.png" alt="" class="less">
+                            <img src="jpg/than.png" alt="" class="then">
+                        </div>
                     </div>
-                    <img src="jpg/than.png" alt="" class="then">
+                    
                 </div>
             </section>
         </section>
