--- a/issue-list.html
+++ b/issue-list.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="mountain-common.css">
-    <link rel="stylesheet" href="review.css">
+    <link rel="stylesheet" href="issue-list.css">
     <link rel="stylesheet" href="header.css">
 </head>
 
@@ -31,7 +31,7 @@
     </header>
 
     <!-- 글 영역 -->
-    <a href="#"><img src="" alt="" class="testImg"></a>
+    <div class="main-img"></div>
     <div class="review-wrapper">
 
         <section class="review-main-wrapper">
